# sokoban-tui

./: --full-page  .gitignore  DECISIONS.md  DOGFOOD.md  Makefile  README.md  demo.tape  pyproject.toml  pyrightconfig.json  sokoban.py
.omc/state/: agent-replay-d7cc2d05-946f-44eb-9998-c12acf987f69.jsonl  subagent-tracking.json
screenshots/: README.md  endscreen.tcell  gameplay.tcell  hero.tcell
sokoban_tui/: app.py  engine.py  levels.py  screens.py  tiles.py
tests/: perf.py  playtest.py  qa.py
